attic/infrarepo/deployment-secondary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnsc-s3-app-s3-upload-app-secondary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnsc-s3-app-s3-upload-app-secondary
  template:
    metadata:
      labels:
        app: cnsc-s3-app-s3-upload-app-secondary
    spec:
      containers:
      - name: cnsc-s3-app-s3-upload-app-secondary
        image: docker.io/etiquet/s3-upload-app:1.40
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: tmp-folder
          mountPath: /tmp
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: tmp-folder
        emptyDir:
          sizeLimit: 500Mi
