attic/infrarepo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnsc-s3-app-s3-upload-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnsc-s3-app-s3-upload-app
  template:
    metadata:
      labels:
        app: cnsc-s3-app-s3-upload-app
    spec:
      containers:
      - name: cnsc-s3-app-s3-upload-app
        image: docker.io/etiquet/s3-upload-app:1.42
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: tmp-folder
          mountPath: /tmp
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem : true
          runAsUser: 1000
          runAsGroup: 1000
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: tmp-folder
        emptyDir:
          sizeLimit: 500Mi
