attic/infrarepo/ingress-ngx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-upload-content-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api-cncs.numerique-interieur.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx
            port:
              number: 80
